Actions
Bug #11430
closedsmbsrv: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with NULL pointer:
smbd_doorsvc.c: In function 'smbd_dop_vss_map_gmttoken': smbd_doorsvc.c:805:10: error: return makes integer from pointer without a cast [-Werror=int-conversion] return (NULL); ^ cc1: all warnings being treated as errors
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit e21c734b6349feebc8c570483066f720d79022b0
commit e21c734b6349feebc8c570483066f720d79022b0 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-30T18:49:35.000Z 11430 smbsrv: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>
Updated by Rich Lowe almost 3 years ago
- Status changed from Closed to In Progress
Updated by Electric Monk almost 3 years ago
- Status changed from In Progress to Closed
git commit f9350d110371843c93efedac637b9d029faafee3
commit f9350d110371843c93efedac637b9d029faafee3 Author: Toomas Soome <tsoome@me.com> Date: 2019-07-30T19:38:35.000Z 11430 smbsrv: NULL pointer errors Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Gordon Ross <gwr@nexenta.com>
Actions